# Jarvis

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
Sandbox/: sandbox.ipynb  sandbox.py  sandbox2.ipynb
Search_Summarize/: custom_search.py
main/: main.py
model/: config.ini  model.py
model/3.5 Sonnet/: model.py
model/Claude/: __init__.py
model/SmolLM/: model.py
models/Claude/: model.py
models/FalconsAI/: model.py
reminders/: calenderapi.py  config.ini  config_example.ini
