[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["shungate <sshungate@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.43.4"
openai = "^1.40.0"
cohere = "^5.6.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
